added style sheet

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <title>💚 Curriculem Vitae </title>
+  <title>📗 Curriculem Vitae </title>
+ <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
-  <img src="Chris Stratford 6.jpg" style="width:15%;height=15%" alt="Chris Profile Pic"></td>
+  <img class="pics circular" src="Chris Stratford 6.jpg" style="width:15%;height=15%" alt="Chris Profile Pic"></td>
   <h1> Chris Stratford</h1>
   <h2>
-    <p><em><strong> AI, RF, ASIC Consultant </strong></em></p>
+    <p id="info"><em><strong>  AI, RF, ASIC Consultant </strong></em></p>
   </h2>
   <hr>
   <strong><a href="https://www.linkedin.com/in/chris-stratford-42a764/"> LinkedIn Profile</a></strong>
@@ -25,7 +27,7 @@
         <td>
           <h3>Skills</h3>
         </td>
-        <td> <strong> Rating</strong> </td>
+        <td> <h3> Rating</h3> </td>
       </tr>
     </thead>
     <tbody>
@@ -38,7 +40,7 @@
               <td> ⭐⭐⭐⭐⭐</td>
             </tr>
             <tr>
-              <td>HTML</td>
+              <td>HTML/CSS/JS</td>
               <td> ⭐⭐⭐</td>
             </tr>
             <tr>
