--- a/index.html
+++ b/index.html
@@ -3,106 +3,62 @@
 
 <head>
   <meta charset="utf-8">
-  <title>📗 Curriculem Vitae </title>
- <link rel="stylesheet" href="css/styles.css">
-
+  <title>Christopher Stratford</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+<link href="https://fonts.googleapis.com/css2?family=Caveat&family=Merriweather&family=Montserrat&family=Pacifico&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <img class="pics circular" src="Chris Stratford 6.jpg" style="width:15%;height=15%" alt="Chris Profile Pic"></td>
-  <h1> Chris Stratford</h1>
-  <h2>
-    <p id="info"><em><strong>  AI, RF, ASIC Consultant </strong></em></p>
-  </h2>
-  <hr>
-  <strong><a href="https://www.linkedin.com/in/chris-stratford-42a764/"> LinkedIn Profile</a></strong>
-  <p>
-    I am a <strong>Research and Development</strong> engineer at <strong>Lockheed Martin</strong>,
-    with over 30 years experience from concept to product.<br> I love coffee.
-  </p>
-  <hr>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <td>
-          <h3>Skills</h3>
-        </td>
-        <td> <h3> Rating</h3> </td>
-      </tr>
-    </thead>
-    <tbody>
-            <tr>
-              <td>C/C++</td>
-              <td> ⭐⭐⭐⭐</td>
-            </tr>
-            <tr>
-              <td>Verilog</td>
-              <td> ⭐⭐⭐⭐⭐</td>
-            </tr>
-            <tr>
-              <td>HTML/CSS/JS</td>
-              <td> ⭐⭐⭐</td>
-            </tr>
-            <tr>
-              <td>Perl</td>
-              <td> ⭐⭐⭐</td>
-            </tr>
-            <tr>
-              <td>Linux</td>
-              <td> ⭐⭐⭐⭐</td>
-            </tr>
-            <tr>
-              <td>C#</td>
-              <td> ⭐</td>
-            </tr>
-            <tr>
-              <td>VHDL</td>
-              <td> ⭐⭐⭐</td>
-            </tr>
-            <tr>
-              <td>CSS/JS</td>
-              <td> ⭐</td>
-            </tr>
-            <tr>
-              <td>Python</td>
-              <td> ⭐⭐⭐</td>
-            </tr>
-            <tr>
-              <td>Shell script</td>
-              <td> ⭐⭐⭐</td>
-            </tr>
-    </tbody>
-  </table>
-  <hr>
-  <h3>Work Experience</h3>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Work</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>May 2019 - Present</td>
-        <td> Lockheed Martin</td>
-      </tr>
-      <tr>
-        <td>May 2018 - Apr 2019</td>
-        <td> Solomon Systech</td>
-      </tr>
-    </tbody>
-    <tfoot>
+  <div class="top">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <h1>I'm Chris</h1>
+    <p> Programmer. </p>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+      <img src="images/mountain.png" alt="mountain-img">
+  </div>
+  <div class="middle">
+    <div class="profile">
+      <img src="" alt="">
+      <h2>Hello.</h2>
+      <p>In the beginning there is imagination . . . vision</p>
+      <p>
+        . . . architect, design, discuss, agree, plan ..
+      </p>
+      <p>
+        ... simplifies the implementation.
+      </p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="" src="" alt="">
+        <h3>Software Artist</h3>
+        <p> C/C++/C#. HTML/CSS/JS. PERL, PYTHON, AWK, SHELL SCRIPT.</p>
+      </div>
+      <div class="skill-row">
+        <img class="" src="" alt="">
+        <h3>Hardware Artist</h3>
+        <p>VERILOG. VHDL. </p><br><br>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>++++++++++++++++++++++++++++</h3>
+      <p>Design Elegant, Enterprising, Programs [D.E.E.P.]</p>
+      <a class="btn" href="mailto:chs9996@gmail.com">CONTACT ME</a>
+    </div>
+  </div>
 
-    </tfoot>
 
-  </table>
-  <hr>
-  <a href="hobbies.html">Hobbies</a>
-  <a href="contact.html">Contact</a>
-  <br>
-  <br>
-  <br>
+  <div class="bottom">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <p>© 2020 Christopher Stratford.</p>
+  </div>
+
+
 </body>
 
 </html>
