--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
   <div class="bottom">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/chris-stratford-42a764/">LinkedIn</a>
     <p>© 2020 Christopher Stratford.</p>
   </div>
 
