--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <div class="profile">
       <img src="" alt="">
       <h2>Hello.</h2>
-      <p>In the beginning there is imagination . . . vision</p>
+      <p>In the beginning there is imagination . . . a vision</p>
       <p>
-        . . . architect, design, discuss, agree, plan ..
+        . . . then architecting, design, discussion, agreements & plans . .
       </p>
       <p>
-        ... simplifies the implementation.
+        . . . that simplifies the implementation.
       </p>
     </div>
     <hr>
@@ -34,12 +34,12 @@
       <h2>My Skills.</h2>
       <div class="skill-row">
         <img class="" src="" alt="">
-        <h3>Software Artist</h3>
+        <h3>Software Engineering</h3>
         <p> C/C++/C#. HTML/CSS/JS. PERL, PYTHON, AWK, SHELL SCRIPT.</p>
       </div>
       <div class="skill-row">
         <img class="" src="" alt="">
-        <h3>Hardware Artist</h3>
+        <h3>Hardware Engineering </h3>
         <p>VERILOG. VHDL. </p><br><br>
       </div>
     </div>
@@ -47,7 +47,7 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>++++++++++++++++++++++++++++</h3>
-      <p>Design Elegant, Enterprising, Programs [D.E.E.P.]</p>
+      <p>Elegant Solutions </p>
       <a class="btn" href="mailto:chs9996@gmail.com">CONTACT ME</a>
     </div>
   </div>
